--- a/src/app/main/sidebar/sidebar.component.scss
+++ b/src/app/main/sidebar/sidebar.component.scss
@@ -178,7 +178,7 @@
         &-title {
 
           margin-right: auto;
-          color: #ffff !important;
+          color: #ffff;
           text-decoration: none !important;
           width: 65%;
           font-weight: 500;
