--- a/src/app/shared/components/views/project/popup-project/popup-project.component.html
+++ b/src/app/shared/components/views/project/popup-project/popup-project.component.html
@@ -1,34 +1,37 @@
-
 <dx-popup class="ms-popup" [width]="popupWidth" height="auto" [shadingColor]="'rgba(0, 0, 0, 0.45)'"
-  [dragEnabled]="true" (onHidden)="closePopup()" [visible]="isPopupOpen" (onShown)="inputAutoFocus()"
+  [dragEnabled]="true" (onHidden)="closePopup()" [visible]="popupVisible" (onShown)="resetInput()"
   contentTemplate="currentTemplate" titleTemplate="title">
 
   <div *dxTemplate="let data of 'currentTemplate'">
     <div class="popup-project">
-      <app-text-field #name [inputLabel]="popupProjectVar.PopupTextFieldNameLabel"
-        [inputPlaceholder]="popupProjectVar.PopupTextFieldNamePlaceholder" [isRequired]="true"></app-text-field>
+      <app-text-field #name [inputLabel]="popupProjectVar.PopupProjectNameLabel"
+        [inputPlaceholder]="popupProjectVar.PopupProjectNamePlaceholder" [isRequired]="true"></app-text-field>
 
       <div class="text-field__group">
-        <app-text-field [inputLabel]="popupProjectVar.PopupTextFieldDepartmentLabel"
-          [inputPlaceholder]="popupProjectVar.PopupTextFieldDepartmentPlaceholder" [ngStyle]="{width: '50%'}"
-          [isRequired]="true"></app-text-field>
 
-        <app-text-field [inputLabel]="popupProjectVar.PopupTextFieldFromDateLabel"
-          [inputPlaceholder]="popupProjectVar.PopupTextFieldFromDatePlaceholder" [ngStyle]="{width: '25%'}">
-        </app-text-field>
+        <app-select-box selectBoxName="DepartmentId" [isRequired]="true"
+          [selectBoxLabel]="popupProjectVar.PopupProjectDepartmentLabel"
+          [inputPlaceholder]="popupProjectVar.PopupProjectDepartmentPlaceholder" [selectBoxData]="departmentOptions"
+          selectBoxValueExpression="DepartmentId" selectBoxDisplayExpression="DepartmentName"
+          [ngStyle]="{width: '50%'}"></app-select-box>
 
-        <app-text-field [inputLabel]="popupProjectVar.PopupTextFieldToDateLabel"
-          [inputPlaceholder]="popupProjectVar.PopupTextFieldToDatePlaceholder" [ngStyle]="{width: '25%'}">
-        </app-text-field>
+        <app-date-box dateBoxName="StartDate" [dateBoxLabel]="popupProjectVar.PopupProjectFromDateLabel"
+          [inputPlaceholder]="popupProjectVar.PopupProjectFromDatePlaceholder" [ngStyle]="{width: '25%'}"></app-date-box>
+
+        <app-date-box dateBoxName="EndDate" [dateBoxLabel]="popupProjectVar.PopupProjectToDateLabel"
+          [inputPlaceholder]="popupProjectVar.PopupProjectToDatePlaceholder" [ngStyle]="{width: '25%'}"></app-date-box>
       </div>
 
-      <app-text-field [inputLabel]="popupProjectVar.PopupTextFieldDescriptionLabel"
-        [inputPlaceholder]="popupProjectVar.PopupTextFieldDescriptionPlaceholder" [textFieldHeight]="'78px'"
+      <app-text-field [inputLabel]="popupProjectVar.PopupProjectDescriptionLabel"
+        [inputPlaceholder]="popupProjectVar.PopupProjectDescriptionPlaceholder" [textFieldHeight]="'78px'"
         [textArea]="true"></app-text-field>
 
-      <app-text-field [inputLabel]="popupProjectVar.PopupTextFieldMemberLabel"
-        [inputPlaceholder]="popupProjectVar.PopupTextFieldMemberPlaceholder"></app-text-field>
+      <app-text-field [inputLabel]="popupProjectVar.PopupProjectMemberLabel"
+        [inputPlaceholder]="popupProjectVar.PopupProjectMemberPlaceholder" [popoverWidth]="popoverWidth"
+        bonusClass="ms-text-field__with-list" [bonusButton]="selectMemberButton"></app-text-field>
 
+
+      <app-user-list></app-user-list>
 
       <div class="ms-modal__footer">
         <div class="ms-modal__button--secondary" (click)="closePopup()">
@@ -48,3 +51,6 @@
     </div>
   </div>
 </dx-popup>
+
+
+
