--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -23,6 +23,9 @@ body {
 .active-link {
   border-bottom: 3px solid #2196f3;
 }
+.inactive{
+  color: gray !important;
+}
 
 .backgr-white {
   background-color: white !important;
