--- a/src/app/main/navbar/navbar.component.html
+++ b/src/app/main/navbar/navbar.component.html
@@ -37,15 +37,11 @@
       </div>
       <div class="project-grids  d-flex content-center align-center">
 
-        <!-- Nút chuyển trang danh sách -->
-        <div class="project-items" *ngFor="let link of headerLinks; let linkIndex = index"
-        [routerLink]="['/project']" [queryParams]="{Type: link['Type']}" queryParamsHandling="merge"
-        [ngClass]="{'active-link': currentLink === linkIndex}"
-        (click)="activeLink(linkIndex)">{{ link['Name'] }}</div>
+        <div class="project-items" *ngFor="let link of headerLinks; let linkIndex = index" [routerLink]="['/project']"
+          [queryParams]="{Type: link['Type']}" queryParamsHandling="merge"
+          [ngClass]="{'active-link': currentLink === linkIndex}" (click)="activeLink(linkIndex)">{{ link['Name'] }}
+        </div>
 
-        <!-- Nút chuyển trang báo cáo -->
-        <!-- <div class="project-items" routerLink="/report" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:
-          true}">{{navbarTexts.Report}}</div> -->
       </div>
     </div>
   </div>
@@ -89,11 +85,14 @@
 
 </div>
 
-<app-popup-department *ngIf="currentPopupType === popupEnums.PopupDepartment" [isPopupOpen]="isPopupOpen"
-  [popupWidth]="popupWidth" [popupTitle]="popupTitle"></app-popup-department>
+<app-popup-department *ngIf="currentPopupType === popupEnums.PopupDepartment" [popupVisible]="popupVisible"
+  [popupWidth]="popupWidth" [popupTitle]="popupTitle" (popupClose)="closePopup()" (popupMemberOpen)="openPopupMember($event)"></app-popup-department>
 
-<app-popup-project *ngIf="currentPopupType === popupEnums.PopupProject" [isPopupOpen]="isPopupOpen"
-  [popupWidth]="popupWidth" [popupTitle]="popupTitle"></app-popup-project>
+<app-popup-project *ngIf="currentPopupType === popupEnums.PopupProject"  [popupVisible]="popupVisible"
+  [popupWidth]="popupWidth" [popupTitle]="popupTitle" (popupClose)="closePopup()" (popupMemberOpen)="openPopupMember($event)"></app-popup-project>
 
-<app-popup-task *ngIf="currentPopupType === popupEnums.PopupTask" [isPopupOpen]="isPopupOpen" [popupWidth]="popupWidth"
-  [popupTitle]="popupTitle"></app-popup-task>
+<app-popup-task *ngIf="currentPopupType === popupEnums.PopupTask" [popupVisible]="popupVisible"
+  [popupWidth]="popupWidth" [popupTitle]="popupTitle" (popupClose)="closePopup()"></app-popup-task>
+
+<app-popup-member [popupVisible]="popupMemberVisible" [popupWidth]="popupMemberWidth" [popupTitle]="popupMemberTitle"
+  (popupClose)="closeMemberPopup()"></app-popup-member>
