--- a/src/app/shared/components/views/department/popup-department/popup-department.component.html
+++ b/src/app/shared/components/views/department/popup-department/popup-department.component.html
@@ -1,29 +1,30 @@
-
-<dx-popup class="ms-popup" [width]="popupWidth" height="auto" [shadingColor]="'rgba(0, 0, 0, 0.45)'" [dragEnabled]="true"
-  (onHidden)="closePopup()" [visible]="isPopupOpen" (onShown)="inputAutoFocus()" contentTemplate="currentTemplate" titleTemplate="title">
+<dx-popup class="ms-popup" [width]="popupWidth" height="auto" [shadingColor]="'rgba(0, 0, 0, 0.45)'"
+  [dragEnabled]="true" (onHidden)="closePopup()" [visible]="popupVisible" (onShown)="resetInput()"
+  contentTemplate="currentTemplate" titleTemplate="title">
 
   <div *dxTemplate="let data of 'currentTemplate'">
     <div class="popup-department">
-      <app-text-field #name [inputLabel]="popupDepartmentVar.PopupTextFieldNameLabel"
-        [inputPlaceholder]="popupDepartmentVar.PopupTextFieldNamePlaceholder" [isRequired]="true"></app-text-field>
-    
-      <app-text-field [inputLabel]="popupDepartmentVar.PopupTextFieldMemberLabel"
-        [inputPlaceholder]="popupDepartmentVar.PopupTextFieldMemberPlaceholder"></app-text-field>
-    
-        <div class="ms-modal__footer">
-          <div
-            class="ms-modal__button--secondary"
-            (click)="closePopup()"
-          >
-            {{ popupDepartmentVar.PopupCloseButton }}
-          </div>
-        
-          <app-button [buttonText]="popupDepartmentVar.PopupSaveButton">
-          </app-button>
+      <app-text-field #name [inputLabel]="popupDepartmentVar.PopupDepartmentNameLabel"
+        [inputPlaceholder]="popupDepartmentVar.PopupDepartmentNamePlaceholder" [isRequired]="true" [(model)]="nameInput">
+      </app-text-field>
+      
+      <app-text-field [inputLabel]="popupDepartmentVar.PopupDepartmentMemberLabel"
+        [inputPlaceholder]="popupDepartmentVar.PopupDepartmentMemberPlaceholder" [popoverWidth]="popoverWidth"
+        bonusClass="ms-text-field__with-list" [bonusButton]="selectMemberButton"></app-text-field>
+
+      <app-user-list></app-user-list>
+
+      <div class="ms-modal__footer">
+        <div class="ms-modal__button--secondary" (click)="closePopup()">
+          {{ popupDepartmentVar.PopupCloseButton }}
         </div>
+
+        <app-button [buttonText]="popupDepartmentVar.PopupSaveButton" (click)="saveData()">
+        </app-button>
+      </div>
     </div>
   </div>
-  
+
   <div *dxTemplate="let data of 'title'">
     <div class="popup-header d-flex content-between align-center">
       <div class="popup-title">{{popupTitle}}</div>
