--- a/src/app/shared/components/views/department/popup-department/popup-department.component.html
+++ b/src/app/shared/components/views/department/popup-department/popup-department.component.html
@@ -7,12 +7,12 @@
       <app-text-field #name [inputLabel]="popupDepartmentVar.PopupDepartmentNameLabel"
         [inputPlaceholder]="popupDepartmentVar.PopupDepartmentNamePlaceholder" [isRequired]="true" [(model)]="nameInput">
       </app-text-field>
-      
+
       <app-text-field [inputLabel]="popupDepartmentVar.PopupDepartmentMemberLabel"
         [inputPlaceholder]="popupDepartmentVar.PopupDepartmentMemberPlaceholder" [popoverWidth]="popoverWidth"
-        bonusClass="ms-text-field__with-list" [bonusButton]="selectMemberButton"></app-text-field>
+        bonusClass="ms-text-field__with-list" [bonusButton]="selectMemberButton" (userListChange)="addUserList($event)"></app-text-field>
 
-      <app-user-list></app-user-list>
+      <app-user-list [userList]="userList"></app-user-list>
 
       <div class="ms-modal__footer">
         <div class="ms-modal__button--secondary" (click)="closePopup()">
