--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -6,6 +6,7 @@ $color-white: #FFFFFF;
 $color-black: #000000;
 $color-grey: #E0E0E0;
 $color-grey-light: #FAFAFA;
+$color-grey-dark: #96a7b5;
 $color-blue: #2196F3;
 $color-blue-light: #e1eeff;
 $color-red: #FF0000;
